
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-10-05 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/lattice/io/ContextReaderCsv.java
	* test/fr/kbertet/lattice/io/ContextReaderCsvTest.java
		+ Add test for duplicated identifiers

2014-10-05 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/lattice/io/ContextReaderCsv.java
	* test/fr/kbertet/lattice/io/ContextReaderCsvTest.java
		+ Add some enhancements to ContextReaderCsv

2014-09-26 Christophe Demko <chdemko@gmail.com>
	* README.md
	* build.xml
	* doc/api/README.md
	* lib/commons-csv/commons-csv-1.0.jar
	* src/fr/kbertet/lattice/Context.java
	* src/fr/kbertet/lattice/io/ContextReaderCsv.iuml
	* src/fr/kbertet/lattice/io/ContextReaderCsv.java
	* src/fr/kbertet/lattice/io/ContextWriterCsv.iuml
	* src/fr/kbertet/lattice/io/ContextWriterCsv.java
	* test/fr/kbertet/lattice/io/package-info.java
	* test/fr/kbertet/lattice/io/ContextReaderCsvTest.java
		+ Add csv reader and writer for Context

2014-09-22 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/DGraph.java
	* src/fr/kbertet/lattice/ClosureSystem.java
	* src/fr/kbertet/lattice/Concept.java
	* src/fr/kbertet/lattice/ConceptLattice.java
	* src/fr/kbertet/lattice/Lattice.java
	* test/fr/kbertet/dgraph/DGraphTest.java
		^ Implement getSinks and getWells using iterators

2014-09-22 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* src/fr/kbertet/dgraph/DAGraph.java
	* src/fr/kbertet/dgraph/DGraph.iuml
	* src/fr/kbertet/dgraph/DGraph.java
	* src/fr/kbertet/dgraph/Node.java
	* src/fr/kbertet/lattice/Concept.java
	* src/fr/kbertet/lattice/ConceptLattice.java
	* src/fr/kbertet/lattice/Lattice.java
	* test/fr/kbertet/dgraph/DAGraphTest.java