@@ -1,2 +1,9 @@
 Introduction
 ============
+
+Here is a short tutorial of the `java-lattices` library presenting its most important capabilities.
+
+This is a live tutorial, which means two things :
+
++ It evolves with the library, so the work is still in progress.
++ Is is generated dynamically by the library itself, at least for some parts.
