@@ -1,0 +1,55 @@
+B
+
+18
+14
+
+Evelyn
+Laura
+Theresa
+Brenda
+Charlotte
+Frances
+Eleanor
+Pearl
+Ruth
+Verne
+Myra
+Katherine
+Syliva
+Nora
+Helen
+Dorothy
+Olivia
+Flora
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+XXXXXX.XX.....
+XXX.XXXX......
+.XXXXXXXX.....
+X.XXXXXX......
+..XXX.X.......
+..X.XX.X......
+....XXXX......
+.....X.XX.....
+....X.XXX.....
+......XXX..X..
+.......XXX.X..
+.......XXX.XXX
+......XXXX.XXX
+.....XX.XXXXXX
+......XX.XXX..
+.......XX.....
+........X.X...
+........X.X...
